test/types/enum/writeSemiAbstractEnumAsValue.good
F1
F1
F1
writeSemiAbstractEnumAsValue.chpl:6: error: halt reached - illegal cast: G.F1 has no integer value
